# WorkBench

./: .env.example  .flake8  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/tests/: test_health.py
dashboard/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
dashboard/src/: App.tsx
docs/: api_reference.md  architecture.md  deployment_guide.md  maker_workbench.md
edx_xblock/: README.md  pyproject.toml  setup.cfg
edx_xblock/nanoskool_xblock/: __init__.py  nanoskool.py
maker_workbench/: README.md  index.html
