[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoskool-backend"
version = "0.1.0"
description = "FastAPI backend for assessments and progress cards"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
]
